[package]
name = "actix-neo4j"
version = "0.1.0"
authors = ["Jens Nilsson <jens.erik.nilsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
neo4rs = "0.5.8"
futures = "0.3.15"
actix-web = "4.0.0-beta.7"